--- a/slog.css
+++ b/slog.css
@@ -297,10 +297,10 @@ header .headertext h2.show, header .headertext h1.show
     
     .headertext 
     {
-        margin-right: -10px;
-        margin-bottom: 90px;
+        margin-right: 0px;
+        margin-bottom: 100px;
         flex: 1 1 auto;
-        max-width: 65%;
+        max-width: 60%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -366,6 +366,7 @@ header .headertext h2.show, header .headertext h1.show
 
 .omenitext p
 {
+    line-height: 1.5;
     margin-bottom: 20px;
     font-size: 16px;
     color: #c4c4c4;
@@ -421,6 +422,31 @@ header .headertext h2.show, header .headertext h1.show
 {
     left: 0;
     width: 100%;
+}
+
+.krogomeni
+{
+    width:60px;
+    height:60px;
+    border-radius:60px;
+    border: solid 2px white;
+    position: absolute;
+    bottom: 0;
+    left: 300px;
+    transition: transform 0.5s ease;
+}
+
+.krogomeni:hover
+{
+    transform: scale(1.07);
+}
+
+.krogomeni 
+{
+    position: absolute;
+    bottom: 0;
+    left: 70%;
+    bottom: -650px;
 }
 
 @keyframes fadeInOmeni 
@@ -486,6 +512,11 @@ header .headertext h2.show, header .headertext h1.show
 
 @media only screen and (min-width: 1700px)
 {
+    .krogomeni
+    {
+        bottom: -700px;
+    }
+
     .omeniimage img, .omenitext
     {
         margin-top: 200px;
@@ -534,5 +565,179 @@ header .headertext h2.show, header .headertext h1.show
     {
         font-size: 40px;
         text-align: center;
+    }
+
+    .krogomeni
+    {
+        left: 60%;
+        bottom: -1300px;
+    }
+}
+
+#storitve
+{
+    height: 100vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+}
+
+.storitvecontainer
+{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.storitvevsebina
+{
+    display: block;
+    width: 300px;
+    padding: 50px;
+    background-color: #262626;
+    border-radius: 10px;
+    margin-right: 40px;
+    margin-top: -100px;
+    transition: background 0.5s, transform 0.5s;
+}
+
+.storitvevsebina:last-child 
+{
+    margin-right: 0;
+}
+
+.storitvevsebina:hover
+{
+    background-color: rgb(231, 55, 55);
+    transform: translateY(-10px);
+    border-radius: 10px;
+}
+
+.storitvenaslov h1
+{
+    margin-top: 100px;
+    margin-left: 120px;
+    font-size: 50px;
+}
+
+.storitvevsebina i
+{
+    margin-top: -30px;
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+.storitvevsebina h2
+{
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.storitvevsebina p
+{
+    line-height: 1.5;
+    font-size: 14px;
+    margin-bottom: 20px;
+    color: #c4c4c4;
+}
+
+.krogstoritve
+{
+    width:60px;
+    height:60px;
+    border-radius:60px;
+    border: solid 2px white;
+    position: absolute;
+    bottom: 0;
+    left: 300px;
+    transition: transform 0.5s ease;
+}
+
+.krogstoritve:hover
+{
+    transform: scale(1.07);
+}
+
+.krogstoritve
+{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    bottom: -1380px;
+}
+
+@media only screen and (min-width: 1700px)
+{
+    .storitvevsebina
+    {
+        width: 400px;
+        margin-top: -200px;
+    }
+
+    .storitvenaslov h1
+    {
+        margin-top: 200px;
+        margin-left: 160px;
+        font-size: 50px;
+    }
+
+    .storitvevsebina i
+    {
+        margin-top: -20px;
+        font-size: 50px;
+        margin-bottom: 30px;
+    }
+
+    .storitvevsebina h2
+    {
+        font-weight: 500;
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
+
+    .storitvevsebina p
+    {
+        line-height: 1.5;
+        font-size: 18px;
+        margin-bottom: 20px;
+        color: #c4c4c4;
+    }
+}
+
+@media only screen and (max-width: 768px)
+{
+    #storitve
+    {
+        height: max-content;
+    }
+
+    .storitvenaslov h1
+    {
+        font-size: 40px;
+        margin-bottom: 140px;
+    } 
+
+    .storitvecontainer
+    {
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .storitvevsebina
+    {
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        margin-bottom: 200px;
+    }
+
+    .krogstoritve
+    {
+        position: absolute;
+        bottom: 0;
+        left: 45%;
+        bottom: -3150px;
     }
 }
