--- a/slog.css
+++ b/slog.css
@@ -7,6 +7,11 @@
     color: #fff;
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
+
 .roboto-black 
 {
     font-family: "Roboto", sans-serif;
@@ -569,8 +574,8 @@ header .headertext h2.show, header .headertext h1.show
 
     .krogomeni
     {
-        left: 60%;
-        bottom: -1300px;
+        left: 75%;
+        bottom: -1335px;
     }
 }
 
@@ -677,7 +682,7 @@ header .headertext h2.show, header .headertext h1.show
 
     .storitvenaslov h1
     {
-        margin-top: 200px;
+        margin-top: 100px;
         margin-left: 160px;
         font-size: 50px;
     }
@@ -702,6 +707,14 @@ header .headertext h2.show, header .headertext h1.show
         font-size: 18px;
         margin-bottom: 20px;
         color: #c4c4c4;
+    }
+
+    .krogstoritve
+    {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        bottom: -1750px;
     }
 }
 
@@ -730,14 +743,478 @@ header .headertext h2.show, header .headertext h1.show
         margin-left: auto;
         margin-right: auto;
         width: 200px;
-        margin-bottom: 200px;
+        margin-bottom: 140px;
     }
 
     .krogstoritve
     {
         position: absolute;
         bottom: 0;
-        left: 45%;
-        bottom: -3150px;
+        left: 40%;
+        bottom: -3050px;
+    }
+}
+
+#projekti
+{
+    height: 100vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+}
+
+.projekticontainer
+{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.projektivsebina
+{
+    position: relative;
+    display: block;
+    width: 300px;
+    border-radius: 10px;
+    margin-right: 190px;
+    margin-top: -100px;
+    transition: transform 0.5s;
+}
+
+.projektivsebina:last-child 
+{
+    margin-right: 0;
+}
+
+.projektivsebina:hover
+{
+    transform: scale(1.1);
+}
+
+.projektivsebina img
+{
+    border-radius: 10px;
+}
+
+.projektivsebinatext
+{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), rgb(231, 55, 55));
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    transition: height 0.5s;
+    padding: 0 25px;
+}
+
+.projektivsebina:hover .projektivsebinatext
+{
+    height: 100%;
+}
+
+.projektivsebina .lgc
+{
+    filter: brightness(125%);
+}
+
+.projektinaslov h1
+{
+    margin-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 120px;
+    font-size: 50px;
+}
+
+.projektivsebinatext a
+{
+    margin-top: 20px;
+    font-size: 20px;
+    background: #fff;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+}
+
+.projektivsebinatext a i
+{
+    color: rgb(231, 55, 55);
+    margin-top: 20px;
+}
+
+.projektivsebina h2
+{
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.projektivsebina p
+{
+    line-height: 1.5;
+    font-size: 14px;
+    color: #c4c4c4;
+}
+
+.krogprojekti1
+{
+    width:60px;
+    height:60px;
+    border-radius:60px;
+    border: solid 2px white;
+    position: absolute;
+    bottom: 0;
+    left: 300px;
+    transition: transform 0.5s ease;
+}
+
+.krogprojekti1:hover
+{
+    transform: scale(1.07);
+}
+
+.krogprojekti1
+{
+    position: absolute;
+    bottom: 0;
+    left: 33.5%;
+    bottom: -1830px;
+}
+
+.krogprojekti2
+{
+    width:60px;
+    height:60px;
+    border-radius:60px;
+    border: solid 2px white;
+    position: absolute;
+    bottom: 0;
+    left: 300px;
+    transition: transform 0.5s ease;
+}
+
+.krogprojekti2:hover
+{
+    transform: scale(1.07);
+}
+
+.krogprojekti2
+{
+    position: absolute;
+    bottom: 0;
+    left: 65.5%;
+    bottom: -1830px;
+}
+
+@media only screen and (min-width: 1700px)
+{
+    .projektivsebina
+    {
+        position: relative;
+        display: block;
+        width: 300px;
+        border-radius: 10px;
+        margin-right: 340px;
+        margin-top: -100px;
+        transition: transform 0.5s;
+    }
+
+    .projektivsebina:last-child 
+    {
+        margin-right: 0;
+    }
+
+    .projektinaslov h1
+    {
+        margin-top: 200px;
+        margin-left: 160px;
+    }
+
+    .projektivsebina i
+    {
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
+
+    .projektivsebina h2
+    {
+        font-weight: 500;
+        margin-bottom: 10px;
+    }
+
+    .projektivsebina p
+    {
+        line-height: 1.5;
+        margin-bottom: 20px;
+        color: #c4c4c4;
+    }
+
+    .krogprojekti1
+    {
+        position: absolute;
+        bottom: 0;
+        left: 33.5%;
+        bottom: -2450px;
+    }
+
+    .krogprojekti2
+    {
+        position: absolute;
+        bottom: 0;
+        left: 65.5%;
+        bottom: -2450px;
+    }
+}
+
+@media only screen and (max-width: 768px)
+{
+    #projekti
+    {
+        height: max-content;
+        padding-bottom: 80px;
+    }
+
+    .projektinaslov h1
+    {
+        font-size: 40px;
+        margin-bottom: 40px;
+    } 
+
+    .projekticontainer
+    {
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .projektivsebina {
+        width: 100%;
+        margin-bottom: 200px;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+
+    .projektivsebina img
+    {
+        width: 300px;
+    }
+    
+    .krogprojekti1
+    {
+        display: none;
+    }
+
+    .krogprojekti2
+    {
+        position: absolute;
+        bottom: 0;
+        left: 40%;
+        bottom: -4620px;
+    }
+
+    .projektivsebinatext
+    {
+        width: 100%;
+        height: 0;
+        background: linear-gradient(rgba(0,0,0,0.6), rgb(231, 55, 55));
+        border-radius: 10px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        transition: height 0.5s;
+        padding: 0 0px;
+    }
+
+}
+
+#kontakt
+{
+    height: 90vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+}
+
+.vrsta
+{
+    display: flex;
+}
+
+.kontaktleva
+{
+    margin-top: 10%;
+    margin-left: 10%;
+}
+
+.kontaktdesna
+{
+    margin-top: 1.5%;
+    margin-left: 10%;
+}
+
+.kontaktleva p
+{
+    margin-top: 30px;
+    color: #c4c4c4;
+}
+
+.kontaktleva p i
+{
+    margin-right: 15px;
+    font-size: 25px;
+    color: rgb(231, 55, 55);
+}
+
+.ikone
+{
+    margin-top: 30px;
+    margin-bottom: 30px;
+} 
+
+.ikone a
+{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    display: inline-block;
+}
+
+.ikone a i
+{
+    transition: transform 0.5s;
+}
+
+.ikone a i:hover
+{
+    transform: translateY(-5px);
+    color: rgb(231, 55, 55);
+}
+
+.gumb
+{
+    display: inline-block;
+    border-radius: 6px;
+    background-color: rgb(231, 55, 55);
+    padding: 10px 50px;
+}
+
+.gumbkontakt
+{
+    display: inline-block;
+    border-radius: 6px;
+    background-color: rgb(231, 55, 55);
+    padding: 10px 50px;
+}
+
+.kontaktdesna form
+{
+    width: 80%;
+}
+
+form input, form textarea
+{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background-color: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 6px;
+}
+
+form .gumbkontakt
+{
+    padding: 14px 60px;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.kontaktleva .naslov
+{
+    font-size: 50px;
+} 
+
+.kontaktleva
+{
+    width: 35%;
+}
+
+.success-message 
+{
+    margin-top: 20px;
+    color: green;
+}
+
+.copyright
+{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background-color: #262626;
+}
+
+@media only screen and (max-width: 600px) { /* ciljanje na telefone */
+    #kontakt {
+        height: auto;
+    }
+
+    .vrsta {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .kontaktleva, .kontaktdesna {
+        width: 100%;
+        margin: 5% auto;
+    }
+
+    .kontaktleva
+    {
+        width: 90%;
+        text-align: center;
+    }
+
+    .kontaktleva .naslov {
+        font-size: 30px;
+    }
+
+    .kontaktleva p i {
+        font-size: 20px;
+    }
+
+    .ikone {
+        margin-top: 20px;
+    }
+
+    .ikone a {
+        font-size: 25px;
+    }
+
+    .gumb, .gumbkontakt {
+        padding: 10px 30px;
+    }
+
+    .kontaktdesna form {
+        width: 90%;
+        max-width: 300px;
+        padding: 15px;
+        border-radius: 10px;
     }
 }
